--- a/contents/korean/0-0-추천사.md
+++ b/contents/korean/0-0-추천사.md
@@ -5,7 +5,7 @@
 >
 
 > 광활하고 끝없이 펼쳐진 *다양성* 속에서 각 생명은 독특하고 소중한 존재입니다... 외부 환경이 아무리 위험할지라도... 공유된 선의 씨앗이 대지를 뚫고 공감, 기쁨, 화합의 꽃으로 피어날 수 있도록 긍정적인 행동을 취합시다.<br></br>
-- 티베트의 [달라이 라마 14세] 성하(https://www.dalailama.com/)
+- 티베트의 [달라이 라마 14세](https://www.dalailama.com/)성하
 
 <br></br>
 
@@ -15,12 +15,12 @@
 <br></br>
 
 > 민주주의는 상반된 가치 사이의 대립이었습니다. 하지만 대만에서는 다양한 가치 사이의 대화가 되었습니다. 오드리 탕은 이념의 제약을 뛰어넘는 '디지털 민주주의'를 만드는 방법을 보여줬고, 이것이 이 책의 가장 큰 공헌입니다.<br></br>
-- 차이잉원](https://en.wikipedia.org/wiki/Tsai_Ing-wen), 중화민국 총통(대만)
+- [차이잉원](https://en.wikipedia.org/wiki/Tsai_Ing-wen), 중화민국 총통(대만)
 
 <br></br>
 
 > 이 책은 기술이 민주주의, 다원주의, 광범위한 인간 번영을 지원하는 미래로 가는 포털을 제공합니다. 우리는 이 미래가 가능하다는 것을 알고 있습니다. 왜냐하면 당이 대만에서 미래를 건설해왔기 때문입니다. 여기에 놓인 개념적 토대는 현대 생활에 꼭 필요한 패러다임의 변화를 이끌고 있습니다.<br></br>
-- 다니엘 S. 앨런](https://en.wikipedia.org/wiki/Danielle_Allen#), 정치 철학자, 제임스 브라이언 코난 하버드 대학교 교수, 맥아더 펠로우, [*우리 선언*](https://wwnorton.com/books/Our-Declaration/) 및 [*Cuz*](https://wwnorton.com/books/9781631494949)의 저자
+- [다니엘 S. 앨런](https://en.wikipedia.org/wiki/Danielle_Allen#), 정치 철학자, 제임스 브라이언 코난 하버드 대학교 교수, 맥아더 펠로우, [*우리 선언*](https://wwnorton.com/books/Our-Declaration/) 및 [*Cuz*](https://wwnorton.com/books/9781631494949)의 저자
 
 <br></br>
 
@@ -35,22 +35,22 @@
 <br></br>
 
 > 오드리 탕과 그녀의 협력자들은 재치, 학식, 낙관주의로 디지털 기술을 활용하여 권위주의에 맞설 수 있으며, 열린 사회의 원칙을 외면하는 것이 아니라 그것에 기대어 그렇게 할 수 있다고 주장합니다.<br></br>
-- 앤 애플바움](https://en.wikipedia.org/wiki/Anne_Applebaum), [퓰리처상](https://www.pulitzer.org/winners/anne-applebaum) 수상자이자 [*민주주의의 황혼*](https://www.penguinrandomhouse.com/books/621076/twilight-of-democracy-by-anne-applebaum/), [*붉은 기근*](https://www.penguinrandomhouse.com/books/236713/red-famine-by-anne-applebaum/)의 저자
+- [앤 애플바움](https://en.wikipedia.org/wiki/Anne_Applebaum), [퓰리처상](https://www.pulitzer.org/winners/anne-applebaum) 수상자이자 [*민주주의의 황혼*](https://www.penguinrandomhouse.com/books/621076/twilight-of-democracy-by-anne-applebaum/), [*붉은 기근*](https://www.penguinrandomhouse.com/books/236713/red-famine-by-anne-applebaum/)의 저자
 
 <br></br>
 
 > 글렌과 오드리는 첨단 컴퓨팅을 활용하여 인간의 사회 및 경제 시스템을 대체하는 것이 아니라 증강하는 방법에 대한 마스터 클래스를 제공하는 팀을 이끌며, 동시에 디지털 기술이 어떻게 세상을 극적으로 더 협력적이고 생산적으로 만들 수 있는지를 보여주고 알려줍니다.<br></br>
-- 마이클 I. 조던](https://en.wikipedia.org/wiki/Michael_I._Jordan), 캘리포니아 버클리 대학교 컴퓨터 과학 및 통계학 석좌교수, [세계 수상자 협회상](https://www.thewlaprize.org/) 컴퓨터 과학 또는 수학 부문 초대 수상자, [*과학*](https://www.science.org/content/article/who-s-michael-jordan-computer-science-new-tool-ranks-researchers-influence)이 2016년 세계에서 가장 영향력 있는 컴퓨터 과학자로 선정한 페홍 첸(Pehong Chen).
+- [마이클 I. 조던](https://en.wikipedia.org/wiki/Michael_I._Jordan), 캘리포니아 버클리 대학교 컴퓨터 과학 및 통계학 석좌교수, [세계 수상자 협회상](https://www.thewlaprize.org/) 컴퓨터 과학 또는 수학 부문 초대 수상자, [*과학*](https://www.science.org/content/article/who-s-michael-jordan-computer-science-new-tool-ranks-researchers-influence)이 2016년 세계에서 가장 영향력 있는 컴퓨터 과학자로 선정한 페홍 첸(Pehong Chen).
 
 <br></br>
 
 > 금융 기술과 디지털 인프라 분야에서 케냐와 다른 아프리카 국가들은... 북부의 낙후된 모델보다 앞서 있습니다.  우리는 *복수*를 통해...이를...더 깊이...발전시켜 성장을 가속화하고 보다 포용적이고 참여적이며 생산적인 미래를 위한 글로벌 모델의 일부가 될 수 있습니다. <br></br>
-- 오리 오콜로-망기](https://en.wikipedia.org/wiki/Ory_Okolloh), [우샤히디](https://en.wikipedia.org/wiki/Ushahidi) 공동 설립자 겸 [베로드-케플 아프리카 벤처스](https://vkav.vc/) 파트너
+- [오리 오콜로-망기](https://en.wikipedia.org/wiki/Ory_Okolloh), [우샤히디](https://en.wikipedia.org/wiki/Ushahidi) 공동 설립자 겸 [베로드-케플 아프리카 벤처스](https://vkav.vc/) 파트너
 
 <br></br>
 
 > 자유와 민주주의를 지원해야 할 디지털 기술이 잘못된 정보, 극단주의, 감시의 무기로 변질되고 있다.  이 멋진 책은 이 모든 것을 개선하기 위한 기술적, 철학적 전략을 대만의 실제 사례에 기반하여 설명합니다.<br></br>
-- 대런 아세모글루](https://en.wikipedia.org/wiki/Daron_Acemoglu), 엘리자베스와 제임스 킬리안 매사추세츠 공과대학 경제학 교수, 존 베이츠 클라크 메달 수상자이자 [*권력과 진보*](https://www.hachettebookgroup.com/titles/daron-acemoglu/power-and-progress/9781541702530/?lens=publicaffairs), [*왜 국가는 실패하는가*](https://en.wikipedia.org/wiki/Why_Nations_Fail)의 공동 저자입니다.
+- [대런 아세모글루](https://en.wikipedia.org/wiki/Daron_Acemoglu), 엘리자베스와 제임스 킬리안 매사추세츠 공과대학 경제학 교수, 존 베이츠 클라크 메달 수상자이자 [*권력과 진보*](https://www.hachettebookgroup.com/titles/daron-acemoglu/power-and-progress/9781541702530/?lens=publicaffairs), [*왜 국가는 실패하는가*](https://en.wikipedia.org/wiki/Why_Nations_Fail)의 공동 저자입니다.
 
 <br></br>
 
@@ -62,38 +62,38 @@
 <br></br>
 
 > 너무 오랫동안 다양성과 기술은 세속화 세력에 의해 칼처럼 사용되어 왔습니다.  놀랍게도, 이 저자들의 숙련된 손을 거쳐 신자들을 위한 방패로 재탄생했습니다.<br></br>
-- 조니 무어 주니어 목사](https://en.wikipedia.org/wiki/Johnnie_Moore_Jr.), [기독교지도자협의회](https://congressofchristianleaders.com/) 회장, [미국 국제종교자유위원회](https://en.wikipedia.org/wiki/United_States_Commission_on_International_Religious_Freedom) 전 위원, 도널드 트럼프 미국 대통령의 비공식 자문위원.
+- [조니 무어 주니어 목사](https://en.wikipedia.org/wiki/Johnnie_Moore_Jr.), [기독교지도자협의회](https://congressofchristianleaders.com/) 회장, [미국 국제종교자유위원회](https://en.wikipedia.org/wiki/United_States_Commission_on_International_Religious_Freedom) 전 위원, 도널드 트럼프 미국 대통령의 비공식 자문위원.
 
 <br></br>
 
 > 오드리 탕은 선구적인 리더의 의미에 대한 새로운 기준을 제시합니다. 그녀가 이 책에서 설득력 있게 제시하는 것처럼 우리 모두가 그녀의 길을 따라갈 용기를 가지길 바랍니다. <br></br>
-- 클라우디아 로페즈 에르난데스](https://en.wikipedia.org/wiki/Claudia_L%C3%B3pez), 콜롬비아 보고타의 전 시장 겸 최초의 여성 시장이자 글로벌 남부에서 가장 높은 성소수자 선출직 공직자
+- [클라우디아 로페즈 에르난데스](https://en.wikipedia.org/wiki/Claudia_L%C3%B3pez), 콜롬비아 보고타의 전 시장 겸 최초의 여성 시장이자 글로벌 남부에서 가장 높은 성소수자 선출직 공직자
 
 <br></br>
 
 > 기술이 문화와 민주주의의 미래에 영향을 미칠 것은 분명합니다. 우리는 그들과 함께 살아가는 다원주의적... 비전이 부족합니다! 다행히도 이 책은 이 책이 옹호하는 원칙을 구체화합니다. 인공지능과 마찬가지로, 이 책은 부분의 합보다 더 큰 기념비적인 집단적 성취입니다.<br></br> 
-- 홀리 허든](https://en.wikipedia.org/wiki/Holly_Herndon), 음악가, 예술가, [*Interdependence*](https://interdependence.fm/) 공동 진행자, [Spawning](https://spawning.ai/) 공동 설립자
+- [홀리 허든](https://en.wikipedia.org/wiki/Holly_Herndon), 음악가, 예술가, [*Interdependence*](https://interdependence.fm/) 공동 진행자, [Spawning](https://spawning.ai/) 공동 설립자
 
 <br></br>
 
 > 오드리 탕과 글렌 웨일의 프로젝트는 대만(및 다른 국가)이 새로운 사회 민주주의의 방향으로 나아가는 데 효과적이고 의미 있는 도움이 될 것입니다. <br></br>
-- 가라타니 고진](https://en.wikipedia.org/wiki/Kojin_Karatani), [*세계사의 구조*](https://www.dukeupress.edu/the-structure-of-world-history)의 저자이자 베르그그루엔 문화철학상 수상자
+- [가라타니 고진](https://en.wikipedia.org/wiki/Kojin_Karatani), [*세계사의 구조*](https://www.dukeupress.edu/the-structure-of-world-history)의 저자이자 베르그그루엔 문화철학상 수상자
 
 <br></br>
 
 > *복수*는 대만의 탄력적인 디지털 전환에 대한 강력한 청사진을 공개합니다...전 세계의 우려하는 시민들에게 귀중한 통찰력을 제공하고...전 세계의 자유와 열린 사회를 위한 역사의 위태로운 순간 속에서 민주주의를 보존하는 데 도움이 될 수 있습니다.<br></br>
-- 프랭크 맥코트](https://en.wikipedia.org/wiki/Frank_McCourt_(임원)), [맥코트 글로벌](https://www.mccourt.com/) 및 [프로젝트 리버티](https://www.projectliberty.io/) 설립자이자 [*우리의 가장 큰 싸움*](https://ourbiggestfight.com/)의 공동 저자입니다.
+- [프랭크 맥코트](https://en.wikipedia.org/wiki/Frank_McCourt_(임원)), [맥코트 글로벌](https://www.mccourt.com/) 및 [프로젝트 리버티](https://www.projectliberty.io/) 설립자이자 [*우리의 가장 큰 싸움*](https://ourbiggestfight.com/)의 공동 저자입니다.
 
 <br></br>
 
 > 새로운 게임의 규칙을 읽고 그 규칙이 만들어낼 세상을 상상하는 것은 짜릿한 일이지만, 게임은 글로벌 문제이고 커뮤니티가 함께 일하는 방식입니다. 환상적입니다!<br></br> 
-- 리차드 가필드](https://en.wikipedia.org/wiki/Richard_Garfield), [*매직: 더 개더링*](https://en.wikipedia.org/wiki/Magic:_The_Gathering) 제작자
+- [리차드 가필드](https://en.wikipedia.org/wiki/Richard_Garfield), [*매직: 더 개더링*](https://en.wikipedia.org/wiki/Magic:_The_Gathering) 제작자
 
 <br></br>
 
 > (저자들은) 수학과 문학에 이르는 학문을 바탕으로...암울한 시대에 희망을 제시하는...숨막히는 가능성에 대한 훌륭한 책을 썼다...독자들은 숙고하고 도전할 많은 것을 발견할 수 있을 것이다...(그리고) 대화에 초대한다!
 <br></br>
-- 앤 마리 슬러터](https://en.wikipedia.org/wiki/Anne-Marie_Slaughter), [뉴 아메리카 재단](https://www.newamerica.org/) CEO, 전 미국 국무부 정책기획국장, [*미완성 사업*](https://www.penguinrandomhouse.com/books/225053/unfinished-business-by-anne-marie-slaughter/), [*체스판과 웹*](https://yalebooks.yale.edu/book/9780300234664/the-chessboard-and-the-web/)의 저자
+- [앤 마리 슬러터](https://en.wikipedia.org/wiki/Anne-Marie_Slaughter), [뉴 아메리카 재단](https://www.newamerica.org/) CEO, 전 미국 국무부 정책기획국장, [*미완성 사업*](https://www.penguinrandomhouse.com/books/225053/unfinished-business-by-anne-marie-slaughter/), [*체스판과 웹*](https://yalebooks.yale.edu/book/9780300234664/the-chessboard-and-the-web/)의 저자
 
 <br></br>
 
@@ -103,98 +103,98 @@
 <br></br>
 
 > 마침내 이론과 실무 모두에서 복수의 중심을 잡는 책이 나왔습니다. 이 책은 기술과 민주주의의 관계를 탐색하고 일반적인 서구적 프레임을 넘어서는 새로운 전략을 개발하는 데 꼭 필요한 안내서입니다. <br></br> 
-- 케이트 크로포드](https://katecrawford.net/), 마이크로소프트 리서치 수석 연구원, 서던 캘리포니아 대학교 연구 교수, 예술가, 음악가, [*아틀라스 오브 AI*](https://en.wikipedia.org/wiki/Atlas_of_AI)의 저자
+- [케이트 크로포드](https://katecrawford.net/), 마이크로소프트 리서치 수석 연구원, 서던 캘리포니아 대학교 연구 교수, 예술가, 음악가, [*아틀라스 오브 AI*](https://en.wikipedia.org/wiki/Atlas_of_AI)의 저자
 
 <br></br>
 
 > ✈️ 에서 첫 장을 읽었는데, 정말 추천할 만한 책입니다. 예전에는 열렬한 독서가였지만 지금은 책에 지루함을 느끼는 편인데, 이 책은 다시 제 관심을 끌었습니다. 미래에 대한 종말론적인 마초적인 생각을 갖지 않기 위해 꼭 필요한 책입니다. 그건 그렇고, 우리 손에 달려 있습니다. <br></br> 
-- 비올레타 아얄라](https://en.wikipedia.org/wiki/Violeta_Ayala), [오스카](https://www.oscars.org/)의 첫 케추아어 출신 멤버이자 수상 경력에 빛나는 XR 영화 제작자   
+- [비올레타 아얄라](https://en.wikipedia.org/wiki/Violeta_Ayala), [오스카](https://www.oscars.org/)의 첫 케추아어 출신 멤버이자 수상 경력에 빛나는 XR 영화 제작자   
 
 <br></br>
 
 > 는 전 세계적으로 기술을 이용해 국가를 분열시키는 부유층... *복수*가 기술을 이용해 단절의 세계에서 그 공간을 되찾아 더 연결되고, 아프리카에서 말하는 인간성, 우분투를 되찾을 수 있는 새로운 여정에 초대합니다. <br></br> 
-- 음무시 마이마네](https://en.wikipedia.org/wiki/Mmusi_Maimane), 남아공 대통령 후보, 전 야당 지도자, [빌드 원 사우스 아프리카](https://www.bosa.co.za/) 설립자, [리버티 교회](https://www.lty.church/)의 목사 겸 장로
+- [음무시 마이마네](https://en.wikipedia.org/wiki/Mmusi_Maimane), 남아공 대통령 후보, 전 야당 지도자, [빌드 원 사우스 아프리카](https://www.bosa.co.za/) 설립자, [리버티 교회](https://www.lty.church/)의 목사 겸 장로
 
 <br></br>
 
 > 지난 수십 년 동안 우리가 기술과 사회에 대해 배운 많은 것을 통합하여 민주주의의 미래를 다시 만드는 방법에 대한 포괄적인 비전을, 실제로 현장에서 실천하고 있는 사람이 명쾌하고 비기술적인 산문으로 제시합니다.<br></br>
-- 알렉스 "샌디" 펜틀랜드](https://en.wikipedia.org/wiki/Alex_Pentland), MIT 미디어랩의 초대 학술 책임자이자 컴퓨터 사회과학 및 데이터 과학의 창시자
+- [알렉스 "샌디" 펜틀랜드](https://en.wikipedia.org/wiki/Alex_Pentland), MIT 미디어랩의 초대 학술 책임자이자 컴퓨터 사회과학 및 데이터 과학의 창시자
 
 <br></br>
 
 > 기술이 우리 삶을 형성해왔고, 형성하고 있으며, 형성할 것이며, 형성해야 하는 방식에 대해 접근하기 쉽고 깊고 새로운 통찰력을 제공하는 놀라운 책입니다.  풍부한 증거를 바탕으로 다원성 증진을 지지하는 강력한 사례를 제시합니다... 우리 모두에게 중요한 교훈을 담고 있습니다. <br></br>
-- 콜린 메이어](https://en.wikipedia.org/wiki/Colin_Mayer), 피터 무어스 옥스퍼드 [사이드 경영대학원](https://en.wikipedia.org/wiki/Sa%C3%AFd_Business_School) 경영학 교수이자 [*번영: 더 나은 비즈니스가 더 큰 선을 만든다*](https://global.oup.com/academic/product/prosperity-9780198866824?lang=en&cc=sk)의 저자입니다.  
+- [콜린 메이어](https://en.wikipedia.org/wiki/Colin_Mayer), 피터 무어스 옥스퍼드 [사이드 경영대학원](https://en.wikipedia.org/wiki/Sa%C3%AFd_Business_School) 경영학 교수이자 [*번영: 더 나은 비즈니스가 더 큰 선을 만든다*](https://global.oup.com/academic/product/prosperity-9780198866824?lang=en&cc=sk)의 저자입니다.  
 
 
 <br></br>
 
 > 인터넷 기술이 파편화를 가속화했다면, 편안한 공존을 이룰 수 있어야 합니다. *다양성*은 이를 위한 힌트로 가득 차 있습니다.<br></br>
-- 아오노 요시히사](https://www.crunchbase.com/person/yoshihisa-aono), [사이보즈](https://cybozu.co.jp/en/company/) 공동 창립자 겸 CEO
+- [아오노 요시히사](https://www.crunchbase.com/person/yoshihisa-aono), [사이보즈](https://cybozu.co.jp/en/company/) 공동 창립자 겸 CEO
 
 <br></br>
 
 
 <다양성>은 오늘날의 핵심 과제 중 하나인 다양성 속에서 협업과 공동의 목적을 구축하는 것에 관한 중요한 책입니다. 저자는 이 과제를 단순히... 정치적인 측면에서 접근하는 것이 아니라... 기술, 경제 등에 대한 귀중한 통찰을 제공합니다.<br></br>
-- 줄리어스 크라인](https://en.wikipedia.org/wiki/Julius_Krein), [*아메리칸 어페어*](https://americanaffairsjournal.org/) 창립자 겸 편집장
+- [줄리어스 크라인](https://en.wikipedia.org/wiki/Julius_Krein), [*아메리칸 어페어*](https://americanaffairsjournal.org/) 창립자 겸 편집장
 
 <br></br>
 
 > 세계에서 가장 저평가된 민주주의 국가인 대만에서 영감을 얻은 *복수성*은 디지털 기술을 활용해...보다 민주적인 미래를 촉진할 수 있다는 강력한 사례를 제시한다...이 훌륭한 책을 읽고...새로운 긴박감을 느꼈지만 희망의 진정한 이유도 제시했다.  
 <br></br>
-- 스티븐 레빗스키](https://en.wikipedia.org/wiki/Steven_Levitsky), 데이비드 로커펠러 하버드대 정부학 교수, [*민주주의는 어떻게 죽는가*](https://www.penguinrandomhouse.com/books/562246/how-democracies-die-by-steven-levitsky-and-daniel-ziblatt/), [*소수의 횡포*](https://www.penguinrandomhouse.com/books/706046/tyranny-of-the-minority-by-steven-levitsky-and-daniel-ziblatt/) 공동 저자
+- [스티븐 레빗스키](https://en.wikipedia.org/wiki/Steven_Levitsky), 데이비드 로커펠러 하버드대 정부학 교수, [*민주주의는 어떻게 죽는가*](https://www.penguinrandomhouse.com/books/562246/how-democracies-die-by-steven-levitsky-and-daniel-ziblatt/), [*소수의 횡포*](https://www.penguinrandomhouse.com/books/706046/tyranny-of-the-minority-by-steven-levitsky-and-daniel-ziblatt/) 공동 저자
 
 <br></br>
 
 > 불안과 분열의 시대에 글렌 웨일과 오드리 탕은 기술과 민주주의가 어떻게 조화를 이루고 더 나은 미래로 나아갈 수 있는지에 대한 보기 드물게 근거 있는 비전을 제시합니다. <br></br> 
-- 트리스탄 해리스](https://en.wikipedia.org/wiki/Tristan_Harris), [휴먼테크놀로지센터](https://en.wikipedia.org/wiki/Center_for_Humane_Technology)의 공동 설립자이자 [*사회적 딜레마*](https://www.thesocialdilemma.com/)의 출연자
+- [트리스탄 해리스](https://en.wikipedia.org/wiki/Tristan_Harris), [휴먼테크놀로지센터](https://en.wikipedia.org/wiki/Center_for_Humane_Technology)의 공동 설립자이자 [*사회적 딜레마*](https://www.thesocialdilemma.com/)의 출연자
 
 <br></br>
 
 
 > 세계에서 가장 근본적인 문제를 해결하는 방법에 대한 흥미롭고 창의적이며 도발적인 아이디어가 가득합니다. 이 책을 읽고 나면 다시는 같은 방식으로 생각하지 않을 것입니다.<br></br>
-- 제이슨 퍼먼](https://en.wikipedia.org/wiki/Jason_Furman), 전 경제자문위원회 의장, 하버드대학교 경제정책실무 교수 겸 애트나 교수
+- [제이슨 퍼먼](https://en.wikipedia.org/wiki/Jason_Furman), 전 경제자문위원회 의장, 하버드대학교 경제정책실무 교수 겸 애트나 교수
 
 <br></br>
 
 > (이 책은... 대만을 세계의 중심에 놓는다. 분쟁의 구심점이 될 것인가, 아니면 평화, 인류, 기술의 민주화 혁명의 정점이 될 것인가? 이것이 우리 세기의 질문입니다. 탕과 웨일, 그리고 그들의 협력자들이 그 해답을 찾기 위한 안내서를 썼습니다.<br></br> 
-- 마이클 하틀리 프리드먼](https://en.wikipedia.org/wiki/Michael_Freedman), [필즈 메달](https://en.wikipedia.org/wiki/Fields_Medal), [맥아더 펠로우십](https://www.macfound.org/programs/awards/fellows/), [국가 과학 훈장](https://en.wikipedia.org/wiki/National_Medal_of_Science) 수상자이자 전 마이크로소프트의 [스테이션 Q](https://news.microsoft.com/stories/stationq/) 양자 컴퓨팅 연구 부서 책임자
+- [마이클 하틀리 프리드먼](https://en.wikipedia.org/wiki/Michael_Freedman), [필즈 메달](https://en.wikipedia.org/wiki/Fields_Medal), [맥아더 펠로우십](https://www.macfound.org/programs/awards/fellows/), [국가 과학 훈장](https://en.wikipedia.org/wiki/National_Medal_of_Science) 수상자이자 전 마이크로소프트의 [스테이션 Q](https://news.microsoft.com/stories/stationq/) 양자 컴퓨팅 연구 부서 책임자
 
 <br></br>
 
 
 > 인류 발전의 미래에 대한 비전이 과거에 명확하게 근거를 두고 있는 것을 마침내 보게 되어 기쁩니다.  플루리티를 통해 우리는 인류의 다양성에 잠재된 풍부한 에너지를 활용하여 향후 100년간의 경제 성장을 이끄는 엔진을 구축할 수 있는 프레임워크를 갖게 되었습니다.<br></br> 
-- 오데드 갤러](https://www.odedgalor.com/), *[인류의 여정](https://www.odedgalor.com/copy-of-unified-growth-theory)*의 저자, 허버트 골드버거 브라운 대학교 경제학 교수
+- [오데드 갤러](https://www.odedgalor.com/), *[인류의 여정](https://www.odedgalor.com/copy-of-unified-growth-theory)*의 저자, 허버트 골드버거 브라운 대학교 경제학 교수
 
 <br></br>
 
 > 낙관적이면서도 실용적인 *복수성*은 인공지능 시대의 민주주의를 재건하기 위한 로드맵을 제시한다... 우리는 자유주의나 권위주의적 비전으로 제한할 필요가 없다... 개방성, 복수성, 인간 정신에 기대는 제3의 길...을 모색해야 한다. 읽을 가치가 있습니다!<br></br>
-- 마크 서먼](https://en.wikipedia.org/wiki/Mark_Surman), [모질라 재단](https://en.wikipedia.org/wiki/Mozilla_Foundation) 사장 겸 전무이사 
+- [마크 서먼](https://en.wikipedia.org/wiki/Mark_Surman), [모질라 재단](https://en.wikipedia.org/wiki/Mozilla_Foundation) 사장 겸 전무이사 
 
 <br></br>
 
 > 공공 부문이 사회의 다른 부문만큼 빠르게 새로운 기술을 활용할 수 있을까요?  오드리 탕이 현장에서 그 가능성을 보여줬으며, 여기서 그 방법을 알려드립니다.<br></br>
-- 이스라엘 자금세탁 및 테러자금조달금지청](https://www.gov.il/en/departments/impa/govil-landing-page) 및 [개인정보 보호청](https://www.gov.il/en/departments/the_privacy_protection_authority/govil-landing-page)의 전 사무총장인 [Shlomit Wagman](https://cyber.harvard.edu/people/shlomit-wagman)
+- [이스라엘 자금세탁 및 테러자금조달금지청](https://www.gov.il/en/departments/impa/govil-landing-page) 및 [개인정보 보호청](https://www.gov.il/en/departments/the_privacy_protection_authority/govil-landing-page)의 전 사무총장인 [Shlomit Wagman](https://cyber.harvard.edu/people/shlomit-wagman)
 
 <br></br>
 
 > (중략)... 기술이 인간을 어떻게 추월할지에 대한 두려움을 불러일으킨다. 이 중요한 책은... 설득력 있고 대담한 대안을 제시합니다. 웨일과 탕은...기술이 어떻게 다원주의적 세계를 발전시켜 관계를 강화하고 다양성을 넘어 사람들을 하나로 묶을 수 있는지 제시합니다. <br></br>
-- 마이크 쿠잔스키](https://omidyar.com/omidyar_team/mike-kubzansky/), [오미디야르 네트워크](https://omidyar.com/) CEO
+- [마이크 쿠잔스키](https://omidyar.com/omidyar_team/mike-kubzansky/), [오미디야르 네트워크](https://omidyar.com/) CEO
 
 
 <br></br>
 
 > 디자인, 실행 및 실체에서 (V)isionary.<br></br>
-- 브래드 카슨](https://en.wikipedia.org/wiki/Brad_Carson), [털사 대학교](https://utulsa.edu/) 및 [책임 있는 혁신을 위한 미국인](https://responsibleinnovation.org/) 총장, 미국 하원의원 겸 육군 차관보
+- [브래드 카슨](https://en.wikipedia.org/wiki/Brad_Carson), [털사 대학교](https://utulsa.edu/) 및 [책임 있는 혁신을 위한 미국인](https://responsibleinnovation.org/) 총장, 미국 하원의원 겸 육군 차관보
 
 <br></br>
 
 > "규제"는 우리의 기술 봉건적 주인을 길들이는 길로 여전히 애매합니다. 권력을 분산시키는 데 성공하지 못할 것입니다. *다수의견*은 이러한 권력을 우회하고 중간에서 배제하기 위해 우리가 가야 할 다른 길, 즉 개방적이고 민주적인 길을 제시합니다.<br></br>
-- 크리스티나 카파라](https://cristinacaffarra.com/), [유니버시티 칼리지 런던](https://profiles.ucl.ac.uk/77797-cristina-caffarra) 명예교수 겸 [경쟁연구정책네트워크](CEPR) 공동설립자(https://cepr.org/about/people/cristina-caffarra)
+- [크리스티나 카파라](https://cristinacaffarra.com/), [유니버시티 칼리지 런던](https://profiles.ucl.ac.uk/77797-cristina-caffarra) 명예교수 겸 [경쟁연구정책네트워크](CEPR) 공동설립자(https://cepr.org/about/people/cristina-caffarra)
 
 <br></br>
 
 > *다양성*은 기술 시대의 사회 철학으로, 자유주의와 기술주의를 넘어서는 제3의 길이다. 그 본질은 혼돈의 가장자리에서 삶의 출현에 있으며, 이 이상 실현 여부는 이 책의 독자들이 그 가장자리로 뛰어드는 진정한 활동가가 되느냐에 달려 있다.<br></br>
-- 켄 스즈키](https://www.linkedin.com/in/ken-suzuki-03489/), 스마트뉴스 공동창립자 겸 회장, [전파적 투자 통화 시스템(PICSY)](https://nameteki.kensuzuki.org/english)의 발명가.
+- [켄 스즈키](https://www.linkedin.com/in/ken-suzuki-03489/), 스마트뉴스 공동창립자 겸 회장, [전파적 투자 통화 시스템(PICSY)](https://nameteki.kensuzuki.org/english)의 발명가.
 
 
 
