Update 2-0-정보기술과 민주주의: 벌어지는 간극.md

--- a/contents/korean/2-0-정보기술과 민주주의: 벌어지는 간극.md
+++ b/contents/korean/2-0-정보기술과 민주주의: 벌어지는 간극.md
@@ -1,8 +1,8 @@
 # 정보기술과 민주주의: 벌어지는 간극
 
-> "감시 자본주의는... 위로부터의 쿠데타이며... 인민 주권의 전복이자 민주주의 해체라는 위험한 표류의 두드러진 세력이다..." - 쇼샤나 주보프, [감시 자본주의의 시대](https://www.hachettebookgroup.com/titles/shoshana-zuboff/the-age-of-surveillance-capitalism/9781610395694/?lens=publicaffairs)[^surveillancecapitalism], 2019
+> "감시 자본주의는... 위로부터의 쿠데타이며... 인민 주권의 전복이자 민주주의 해체라는 위험한 표류의 두드러진 세력이다..." - 쇼샤나 주보프, [감시 자본주의의 시대](https://www.hachettebookgroup.com/titles/shoshana-zuboff/the-age-of-surveillance-capitalism/9781610395694/?lens=publicaffairs [^surveillancecapitalism], 2019
 
-[^감시자본주의]: 쇼샨나 주보프, *감시 자본주의의 시대* (뉴욕: 퍼블릭 어페어스, 2019): 513.
+[^surveillancecapitalism]: 쇼샨나 주보프, *감시 자본주의의 시대* (뉴욕: 퍼블릭 어페어스, 2019): 513.
 
 > "우리는 기술이 일자리를 빼앗고, 임금을 줄이고, 불평등을 심화시키고, 건강을 위협하고, 환경을 파괴하고, 사회를 타락시키고, 아이들을 타락시키고, 인간성을 손상시키고, 미래를 위협하고, 모든 것을 망치기 직전이라는 거짓말을 듣고 있습니다." - 마크 안드레센, "[테크노 낙관주의자 선언문](https://a16z.com/the-techno-optimist-manifesto/)"[^OptimistManifesto], 2023년
 
