--- a/contents/korean/2-0-정보기술과 민주주의: 벌어지는 간극.md
+++ b/contents/korean/2-0-정보기술과 민주주의: 벌어지는 간극.md
@@ -1,6 +1,6 @@
 # 정보기술과 민주주의: 벌어지는 간극
 
-> "감시 자본주의는... 위로부터의 쿠데타이며... 인민 주권의 전복이자 민주주의 해체라는 위험한 표류의 두드러진 세력이다..." - 쇼샤나 주보프, [감시 자본주의의 시대](https://www.hachettebookgroup.com/titles/shoshana-zuboff/the-age-of-surveillance-capitalism/9781610395694/?lens=publicaffairs [^surveillancecapitalism], 2019
+> "감시 자본주의는... 위로부터의 쿠데타이며... 인민 주권의 전복이자 민주주의 해체라는 위험한 표류의 두드러진 세력이다..." - 쇼샤나 주보프, "[감시 자본주의의 시대](https://www.hachettebookgroup.com/titles/shoshana-zuboff/the-age-of-surveillance-capitalism/9781610395694/?lens=publicaffairs)" [^surveillancecapitalism], 2019
 
 [^surveillancecapitalism]: 쇼샨나 주보프, *감시 자본주의의 시대* (뉴욕: 퍼블릭 어페어스, 2019): 513.
 
