Update 2-0-정보기술과 민주주의: 벌어지는 간극.md

--- a/contents/korean/2-0-정보기술과 민주주의: 벌어지는 간극.md
+++ b/contents/korean/2-0-정보기술과 민주주의: 벌어지는 간극.md
@@ -23,7 +23,7 @@
 
 ### 민주주의에 대한 기술의 공격
 
-지난 10년간의 정보 기술은 서로 연관되어 있지만 상반된 두 가지 방식으로 민주주의를 위협해 왔습니다. 대런 아세모글루와 제임스 A. 로빈슨의 유명한 주장처럼, 자유 민주주의 사회는 사회 붕괴와 권위주의 사이의 '[narrow corridor](https://www.penguinrandomhouse.com/books/555400/the-narrow-corridor-by-daron-acemoglu-and-james-a-robinson/)'에 존재합니다[^Narrow corridor].   양쪽에서 보면 정보 기술은 이 통로를 좁히며 자유 사회의 가능성을 압박하고 있는 것처럼 보입니다.
+지난 10년간의 정보 기술은 서로 연관되어 있지만 상반된 두 가지 방식으로 민주주의를 위협해 왔습니다. 대런 아세모글루와 제임스 A. 로빈슨의 유명한 주장처럼, 자유 민주주의 사회는 사회 붕괴와 권위주의 사이의 '[좁은 간극](https://www.penguinrandomhouse.com/books/555400/the-narrow-corridor-by-daron-acemoglu-and-james-a-robinson/)'에 존재합니다[^좁은 간극].   양쪽에서 보면 정보 기술은 이 통로를 좁히며 자유 사회의 가능성을 압박하고 있는 것처럼 보입니다.
 
 한편으로는 소셜 미디어, 암호화 및 기타 금융 기술 등의 기술이 사회 구조를 무너뜨리고 양극화를 심화하며 규범을 약화시키고 법 집행을 약화시키고 금융 시장의 속도와 범위를 민주적 정치가 책임질 수 없을 정도로 확대하고 있는 것으로 보입니다.  우리는 이러한 위협을 '반사회적'이라고 부릅니다.  다른 한편으로, 기술(예: 머신러닝, 기초 모델, 사물 인터넷)은 중앙 집중식 감시의 역량을 강화하고, 소수의 엔지니어 그룹이 수십억 명의 시민과 고객의 사회생활 규칙을 형성하는 시스템의 패턴을 설정하는 능력을 강화하며, 사람들이 자신의 삶과 커뮤니티 형성에 의미 있게 참여할 수 있는 범위를 축소하고 있습니다.  우리는 이러한 위협을 '중앙 집중화'라고 부릅니다.  두 가지 위협 모두 알렉시스 드 토크빌이 [미국의 민주주의](https://www.gutenberg.org/files/815/815-h/815-h.htm)에서 강조한 것처럼, 민주주의는 깊고 다양한 비시장적이고 분산된 사회적, 시민적 연결에 의존하여 번성하는 민주주의의 핵심을 건드리고 있습니다[^Tocqueville]. 
 
