Update 2-0-정보기술과 민주주의: 벌어지는 간극.md

--- a/contents/korean/2-0-정보기술과 민주주의: 벌어지는 간극.md
+++ b/contents/korean/2-0-정보기술과 민주주의: 벌어지는 간극.md
@@ -278,7 +278,7 @@ EU와 미국의 규제 당국은 주요 기술 기업에 대한 반독점 조사
 다른 길은 가능합니다.  기술과 민주주의는 서로의 가장 위대한 동맹이 될 수 있습니다.  사실 대규모의 '디지털 민주주의'는 우리가 상상하기 시작한 꿈일 뿐이며, 실현 가능성을 높이기 위해서는 전례 없는 기술이 필요합니다.  우리의 미래를 재구상하고 공공 투자, 연구 의제, 민간 개발을 전환함으로써 우리는 그 미래를 만들 수 있습니다.  이 책의 나머지 부분에서는 그 방법을 보여드리고자 합니다.  그리고 그 미래를 실현하는 데 있어 그 어느 곳보다 앞서 나간 곳, 민주주의와 디지털 기술이 단순한 동맹이 아니라 서로 깊이 얽혀 있는 곳의 이야기를 들려드리는 것으로 시작하겠습니다.
 
 
-[^NarrowCorridor]: 대런 아세모글루, 제임스 A 로빈슨, _The Narrow Corridor: 국가, 사회, 그리고 자유의 운명_. (뉴욕: 펭귄북스, 2020).
+[^좁은 간극]: 대런 아세모글루, 제임스 A 로빈슨, _The Narrow Corridor: 국가, 사회, 그리고 자유의 운명_. (뉴욕: 펭귄북스, 2020).
 [토크빌]: 이러한 관계는 지역적 가치와 신뢰에 기반한 단위로 가치를 표시하기 때문에 '보편적' 통화로 양자 간 거래 교환을 기반으로 하는 시장에서의 관계와는 다릅니다.
 [^아웃인더컨트리]: 메리 그레이, *아웃 인 더 컨트리: 미국 농촌의 청소년, 미디어, 퀴어 가시성* (뉴욕: NYU Press, 2009). 오데이, 에밀리 B., 리처드 G. 하임버그, "소셜 미디어 사용, 사회적 불안, 외로움: 체계적 검토," _Computers in Human Behavior Reports 3_, no. 100070 (January 2021), https://doi.org/10.1016/j.chbr.2021.100070; 또한 Hunt Allcott, Luca Braghieri, Sarah Eichmeyer, Matthew Gentzkow, "소셜 미디어의 복지 효과," _American Economic Review_ 110, no. 3 (March 1, 2020): 629-76. https://doi.org/10.1257/aer.20190658.
 [^고스트워크]: 싯다르트 수리, 메리 그레이, _고스트 워크: 실리콘밸리가 새로운 글로벌 하층민을 만드는 것을 막는 방법_, (보스턴: 휴튼 미플린 하코트, 2019). 데이비드 H. 저자, "왜 아직도 일자리가 많은가? 작업장 자동화의 역사와 미래", *경제 전망 저널* 29, no. 3 (2015): 3-30, https://www.aeaweb.org/articles?id=10.1257%2Fjep.29.3.3&source=post_page.
