--- a/contents/korean/0-1-저자소개.md
+++ b/contents/korean/0-1-저자소개.md
@@ -1,6 +1,6 @@
 ![](https://raw.githubusercontent.com/pluralitybook/plurality/main/figs/author-AudreyGlen.jpg)
 
- [E. 글렌 웨일](https://www.glenweyl.com)은 [래디컬엑스체인지](https://www.radicalxchange.org), [마이크로소프트 리서치](https://www.microsoft.com/en-us/research/)의 [복수 기술 협업](https://aka.ms/plural) 및 [복수 연구소](https://plurality.institute)의 설립자이자 [*래디컬 마켓*](https://press.princeton.edu/books/hardcover/9780691177502/radical-markets)의 공동 저자입니다.  오드리 탕](https://en.wikipedia.org/wiki/Audrey_Tang)은 [🇹🇼](https://en.wikipedia.org/wiki/Taiwan)의 초대 [디지털부 장관](https://en.wikipedia.org/wiki/Ministry_of_Digital_Affairs_%28Taiwan%29) 및 [🏳️‍⚧️](https://en.wikipedia.org/wiki/List_of_transgender_political_office-holders)의 초대 [디지털부 장관]입니다.          
+ [E. 글렌 웨일](https://www.glenweyl.com)은 [래디컬엑스체인지](https://www.radicalxchange.org), [마이크로소프트 리서치](https://www.microsoft.com/en-us/research/)의 [복수 기술 협업](https://aka.ms/plural) 및 [복수 연구소](https://plurality.institute)의 설립자이자 [*래디컬 마켓*](https://press.princeton.edu/books/hardcover/9780691177502/radical-markets)의 공동 저자입니다.  [오드리 탕](https://en.wikipedia.org/wiki/Audrey_Tang)은 [🇹🇼](https://en.wikipedia.org/wiki/Taiwan)의 초대 [디지털부 장관](https://en.wikipedia.org/wiki/Ministry_of_Digital_Affairs_%28Taiwan%29) 및 [🏳️‍⚧️](https://en.wikipedia.org/wiki/List_of_transgender_political_office-holders)의 초대 [디지털부 장관]입니다.          
 
 <br></br>
 
