--- a/contents/korean/0-0-추천사.md
+++ b/contents/korean/0-0-추천사.md
@@ -134,7 +134,7 @@
 <br></br>
 
 
-<다양성>은 오늘날의 핵심 과제 중 하나인 다양성 속에서 협업과 공동의 목적을 구축하는 것에 관한 중요한 책입니다. 저자는 이 과제를 단순히... 정치적인 측면에서 접근하는 것이 아니라... 기술, 경제 등에 대한 귀중한 통찰을 제공합니다.<br></br>
+> <다양성>은 오늘날의 핵심 과제 중 하나인 다양성 속에서 협업과 공동의 목적을 구축하는 것에 관한 중요한 책입니다. 저자는 이 과제를 단순히... 정치적인 측면에서 접근하는 것이 아니라... 기술, 경제 등에 대한 귀중한 통찰을 제공합니다.<br></br>
 - [줄리어스 크라인](https://en.wikipedia.org/wiki/Julius_Krein), [*아메리칸 어페어*](https://americanaffairsjournal.org/) 창립자 겸 편집장
 
 <br></br>
