--- a/contents/korean/0-0-추천사.md
+++ b/contents/korean/0-0-추천사.md
@@ -24,12 +24,12 @@
 
 <br></br>
 
-> *복수*는 낙관적인 공상 과학 소설처럼 읽히지만, 이미 현실에서 일어나고 있습니다! 전 세계 민주주의 국가들이 대만의 발자취를 따라 디지털 시대에 걸맞은 자유 사회를 업그레이드할 수 있을까요? 해피엔딩을 기대해봅니다. <br></br>
+> *플루럴리티*는 낙관적인 공상 과학 소설처럼 읽히지만, 이미 현실에서 일어나고 있습니다! 전 세계 민주주의 국가들이 대만의 발자취를 따라 디지털 시대에 걸맞은 자유 사회를 업그레이드할 수 있을까요? 해피엔딩을 기대해봅니다. <br></br>
 - 조셉 고든-레빗, 에미상 수상 작가이자 [HITRECORD](https://hitrecord.org/) 설립자(사진: 조셉 고든-레빗)
 
 <br></br>
 
-> *복수*는... 진정으로 매혹적인... 잠재적인 글로벌 가속기... 아프리카적 관점의 협업... 21세기를 아프리카의 세기로 만들려는 도전을 받아들인 아프리카 사상가들이 반드시 읽어야 하고 공동 창작해야 할 책입니다.<br></br>
+> *플루럴리티*는... 진정으로 매혹적인... 잠재적인 글로벌 가속기... 아프리카적 관점의 협업... 21세기를 아프리카의 세기로 만들려는 도전을 받아들인 아프리카 사상가들이 반드시 읽어야 하고 공동 창작해야 할 책입니다.<br></br>
 - 오비 에제퀘실리](https://en.wikipedia.org/wiki/Oby_Ezekwesili), [국제투명성기구](https://www.transparency.org/en), [#BringBackOurGirls](https://bringbackourgirls.ng/) 공동 창립자, [정치, 정책 및 거버넌스 학교](https://thesppg.org/our-program/) 및 [#FixPolitics](https://www.fixpolitics.org/) 설립자, 나이지리아 정치 지도자
 
 <br></br>
@@ -44,7 +44,7 @@
 
 <br></br>
 
-> 금융 기술과 디지털 인프라 분야에서 케냐와 다른 아프리카 국가들은... 북부의 낙후된 모델보다 앞서 있습니다.  우리는 *복수*를 통해...이를...더 깊이...발전시켜 성장을 가속화하고 보다 포용적이고 참여적이며 생산적인 미래를 위한 글로벌 모델의 일부가 될 수 있습니다. <br></br>
+> 금융 기술과 디지털 인프라 분야에서 케냐와 다른 아프리카 국가들은... 북부의 낙후된 모델보다 앞서 있습니다.  우리는 *플루럴리티*를 통해...이를...더 깊이...발전시켜 성장을 가속화하고 보다 포용적이고 참여적이며 생산적인 미래를 위한 글로벌 모델의 일부가 될 수 있습니다. <br></br>
 - [오리 오콜로-망기](https://en.wikipedia.org/wiki/Ory_Okolloh), [우샤히디](https://en.wikipedia.org/wiki/Ushahidi) 공동 설립자 겸 [베로드-케플 아프리카 벤처스](https://vkav.vc/) 파트너
 
 <br></br>
@@ -81,7 +81,7 @@
 
 <br></br>
 
-> *복수*는 대만의 탄력적인 디지털 전환에 대한 강력한 청사진을 공개합니다...전 세계의 우려하는 시민들에게 귀중한 통찰력을 제공하고...전 세계의 자유와 열린 사회를 위한 역사의 위태로운 순간 속에서 민주주의를 보존하는 데 도움이 될 수 있습니다.<br></br>
+> *플루럴리티*는 대만의 탄력적인 디지털 전환에 대한 강력한 청사진을 공개합니다...전 세계의 우려하는 시민들에게 귀중한 통찰력을 제공하고...전 세계의 자유와 열린 사회를 위한 역사의 위태로운 순간 속에서 민주주의를 보존하는 데 도움이 될 수 있습니다.<br></br>
 - [프랭크 맥코트](https://en.wikipedia.org/wiki/Frank_McCourt_(임원)), [맥코트 글로벌](https://www.mccourt.com/) 및 [프로젝트 리버티](https://www.projectliberty.io/) 설립자이자 [*우리의 가장 큰 싸움*](https://ourbiggestfight.com/)의 공동 저자입니다.
 
 <br></br>
@@ -107,12 +107,12 @@
 
 <br></br>
 
-> ✈️ 에서 첫 장을 읽었는데, 정말 추천할 만한 책입니다. 예전에는 열렬한 독서가였지만 지금은 책에 지루함을 느끼는 편인데, 이 책은 다시 제 관심을 끌었습니다. 미래에 대한 종말론적인 마초적인 생각을 갖지 않기 위해 꼭 필요한 책입니다. 그건 그렇고, 우리 손에 달려 있습니다. <br></br> 
+> ✈비행기에서 첫 장을 읽었는데, 정말 추천할 만한 책입니다. 예전에는 열렬한 독서가였지만 지금은 책에 지루함을 느끼는 편인데, 이 책은 다시 제 관심을 끌었습니다. 미래에 대한 종말론적인 마초적인 생각을 갖지 않기 위해 꼭 필요한 책입니다. 그건 그렇고, 우리 손에 달려 있습니다. <br></br> 
 - [비올레타 아얄라](https://en.wikipedia.org/wiki/Violeta_Ayala), [오스카](https://www.oscars.org/)의 첫 케추아어 출신 멤버이자 수상 경력에 빛나는 XR 영화 제작자   
 
 <br></br>
 
-> 는 전 세계적으로 기술을 이용해 국가를 분열시키는 부유층... *복수*가 기술을 이용해 단절의 세계에서 그 공간을 되찾아 더 연결되고, 아프리카에서 말하는 인간성, 우분투를 되찾을 수 있는 새로운 여정에 초대합니다. <br></br> 
+> 는 전 세계적으로 기술을 이용해 국가를 분열시키는 부유층... *플루럴리티*가 기술을 이용해 단절의 세계에서 그 공간을 되찾아 더 연결되고, 아프리카에서 말하는 인간성, 우분투를 되찾을 수 있는 새로운 여정에 초대합니다. <br></br> 
 - [음무시 마이마네](https://en.wikipedia.org/wiki/Mmusi_Maimane), 남아공 대통령 후보, 전 야당 지도자, [빌드 원 사우스 아프리카](https://www.bosa.co.za/) 설립자, [리버티 교회](https://www.lty.church/)의 목사 겸 장로
 
 <br></br>
@@ -128,18 +128,18 @@
 
 <br></br>
 
-> 인터넷 기술이 파편화를 가속화했다면, 편안한 공존을 이룰 수 있어야 합니다. *다양성*은 이를 위한 힌트로 가득 차 있습니다.<br></br>
+> 인터넷 기술이 파편화를 가속화했다면, 편안한 공존을 이룰 수 있어야 합니다. *플루럴리티*은 이를 위한 힌트로 가득 차 있습니다.<br></br>
 - [아오노 요시히사](https://www.crunchbase.com/person/yoshihisa-aono), [사이보즈](https://cybozu.co.jp/en/company/) 공동 창립자 겸 CEO
 
 <br></br>
 
 
-> <다양성>은 오늘날의 핵심 과제 중 하나인 다양성 속에서 협업과 공동의 목적을 구축하는 것에 관한 중요한 책입니다. 저자는 이 과제를 단순히... 정치적인 측면에서 접근하는 것이 아니라... 기술, 경제 등에 대한 귀중한 통찰을 제공합니다.<br></br>
+> *플루럴리티*는 오늘날의 핵심 과제 중 하나인 다양성 속에서 협업과 공동의 목적을 구축하는 것에 관한 중요한 책입니다. 저자는 이 과제를 단순히... 정치적인 측면에서 접근하는 것이 아니라... 기술, 경제 등에 대한 귀중한 통찰을 제공합니다.<br></br>
 - [줄리어스 크라인](https://en.wikipedia.org/wiki/Julius_Krein), [*아메리칸 어페어*](https://americanaffairsjournal.org/) 창립자 겸 편집장
 
 <br></br>
 
-> 세계에서 가장 저평가된 민주주의 국가인 대만에서 영감을 얻은 *복수성*은 디지털 기술을 활용해...보다 민주적인 미래를 촉진할 수 있다는 강력한 사례를 제시한다...이 훌륭한 책을 읽고...새로운 긴박감을 느꼈지만 희망의 진정한 이유도 제시했다.  
+> 세계에서 가장 저평가된 민주주의 국가인 대만에서 영감을 얻은 *플루럴리티*은 디지털 기술을 활용해...보다 민주적인 미래를 촉진할 수 있다는 강력한 사례를 제시한다...이 훌륭한 책을 읽고...새로운 긴박감을 느꼈지만 희망의 진정한 이유도 제시했다.  
 <br></br>
 - [스티븐 레빗스키](https://en.wikipedia.org/wiki/Steven_Levitsky), 데이비드 로커펠러 하버드대 정부학 교수, [*민주주의는 어떻게 죽는가*](https://www.penguinrandomhouse.com/books/562246/how-democracies-die-by-steven-levitsky-and-daniel-ziblatt/), [*소수의 횡포*](https://www.penguinrandomhouse.com/books/706046/tyranny-of-the-minority-by-steven-levitsky-and-daniel-ziblatt/) 공동 저자
 
@@ -167,7 +167,7 @@
 
 <br></br>
 
-> 낙관적이면서도 실용적인 *복수성*은 인공지능 시대의 민주주의를 재건하기 위한 로드맵을 제시한다... 우리는 자유주의나 권위주의적 비전으로 제한할 필요가 없다... 개방성, 복수성, 인간 정신에 기대는 제3의 길...을 모색해야 한다. 읽을 가치가 있습니다!<br></br>
+> 낙관적이면서도 실용적인 *플루럴리티*은 인공지능 시대의 민주주의를 재건하기 위한 로드맵을 제시한다... 우리는 자유주의나 권위주의적 비전으로 제한할 필요가 없다... 개방성, 복수성, 인간 정신에 기대는 제3의 길...을 모색해야 한다. 읽을 가치가 있습니다!<br></br>
 - [마크 서먼](https://en.wikipedia.org/wiki/Mark_Surman), [모질라 재단](https://en.wikipedia.org/wiki/Mozilla_Foundation) 사장 겸 전무이사 
 
 <br></br>
@@ -193,7 +193,7 @@
 
 <br></br>
 
-> *다양성*은 기술 시대의 사회 철학으로, 자유주의와 기술주의를 넘어서는 제3의 길이다. 그 본질은 혼돈의 가장자리에서 삶의 출현에 있으며, 이 이상 실현 여부는 이 책의 독자들이 그 가장자리로 뛰어드는 진정한 활동가가 되느냐에 달려 있다.<br></br>
+> *플루럴리티*은 기술 시대의 사회 철학으로, 자유주의와 기술주의를 넘어서는 제3의 길이다. 그 본질은 혼돈의 가장자리에서 삶의 출현에 있으며, 이 이상 실현 여부는 이 책의 독자들이 그 가장자리로 뛰어드는 진정한 활동가가 되느냐에 달려 있다.<br></br>
 - [켄 스즈키](https://www.linkedin.com/in/ken-suzuki-03489/), 스마트뉴스 공동창립자 겸 회장, [전파적 투자 통화 시스템(PICSY)](https://nameteki.kensuzuki.org/english)의 발명가.
 
 
