--- a/contents/korean/0-0-추천사.md
+++ b/contents/korean/0-0-추천사.md
@@ -4,7 +4,7 @@
 
 >
 
-> 광활하고 끝없이 펼쳐진 *다양성* 속에서 각 생명은 독특하고 소중한 존재입니다... 외부 환경이 아무리 위험할지라도... 공유된 선의 씨앗이 대지를 뚫고 공감, 기쁨, 화합의 꽃으로 피어날 수 있도록 긍정적인 행동을 취합시다.<br></br>
+> 광활하고 끝없이 펼쳐진 *플루럴리티* 속에서 각 생명은 독특하고 소중한 존재입니다... 외부 환경이 아무리 위험할지라도... 공유된 선의 씨앗이 대지를 뚫고 공감, 기쁨, 화합의 꽃으로 피어날 수 있도록 긍정적인 행동을 취합시다.<br></br>
 - 티베트의 [달라이 라마 14세](https://www.dalailama.com/) 성하
 
 <br></br>
