--- a/contents/korean/0-0-추천사.md
+++ b/contents/korean/0-0-추천사.md
@@ -25,7 +25,7 @@
 <br></br>
 
 > *플루럴리티*는 낙관적인 공상 과학 소설처럼 읽히지만, 이미 현실에서 일어나고 있습니다! 전 세계 민주주의 국가들이 대만의 발자취를 따라 디지털 시대에 걸맞은 자유 사회를 업그레이드할 수 있을까요? 해피엔딩을 기대해봅니다. <br></br>
-- 조셉 고든-레빗, 에미상 수상 작가이자 [HITRECORD](https://hitrecord.org/) 설립자(사진: 조셉 고든-레빗)
+- 조셉 고든-레빗, 에미상 수상 작가이자 [HITRECORD](https://hitrecord.org/) 
 
 <br></br>
 
