--- a/contents/korean/0-0-추천사.md
+++ b/contents/korean/0-0-추천사.md
@@ -30,7 +30,7 @@
 <br></br>
 
 > *플루럴리티*는... 진정으로 매혹적인... 잠재적인 글로벌 가속기... 아프리카적 관점의 협업... 21세기를 아프리카의 세기로 만들려는 도전을 받아들인 아프리카 사상가들이 반드시 읽어야 하고 공동 창작해야 할 책입니다.<br></br>
-- 오비 에제퀘실리](https://en.wikipedia.org/wiki/Oby_Ezekwesili), [국제투명성기구](https://www.transparency.org/en), [#BringBackOurGirls](https://bringbackourgirls.ng/) 공동 창립자, [정치, 정책 및 거버넌스 학교](https://thesppg.org/our-program/) 및 [#FixPolitics](https://www.fixpolitics.org/) 설립자, 나이지리아 정치 지도자
+- [오비 에제퀘실리](https://en.wikipedia.org/wiki/Oby_Ezekwesili), [국제투명성기구](https://www.transparency.org/en), [#BringBackOurGirls](https://bringbackourgirls.ng/) 공동 창립자, [정치, 정책 및 거버넌스 학교](https://thesppg.org/our-program/) 및 [#FixPolitics](https://www.fixpolitics.org/) 설립자, 나이지리아 정치 지도자
 
 <br></br>
 
