--- a/contents/korean/0-0-추천사.md
+++ b/contents/korean/0-0-추천사.md
@@ -55,7 +55,7 @@
 <br></br>
 
 > 사회 정의...운동에 대한 우리의 소중한 꿈이 실현된다면 세상은 어떤 모습일까요?  (그들은)...민주주의를 재창조하고...(진정으로) 국민에게 봉사하기 위한...급진적이면서도 실용적인 해결책을 제시합니다...일부는...실행되어...진정한 변화를 위한...등대 역할을 하고 있습니다.<br></br>
-- 스타브 샤피르](https://en.wikipedia.org/wiki/Stav_Shaffir), [이스라엘 사회정의 시위](https://en.wikipedia.org/wiki/2011_Israeli_social_justice_protests)의 지도자이자 최연소 여성 크네세트 의원.
+- [스타브 샤피르](https://en.wikipedia.org/wiki/Stav_Shaffir), [이스라엘 사회정의 시위](https://en.wikipedia.org/wiki/2011_Israeli_social_justice_protests)의 지도자이자 최연소 여성 크네세트 의원.
 
 
 
