--- a/contents/korean/0-0-추천사.md
+++ b/contents/korean/0-0-추천사.md
@@ -50,7 +50,7 @@
 <br></br>
 
 > 자유와 민주주의를 지원해야 할 디지털 기술이 잘못된 정보, 극단주의, 감시의 무기로 변질되고 있다.  이 멋진 책은 이 모든 것을 개선하기 위한 기술적, 철학적 전략을 대만의 실제 사례에 기반하여 설명합니다.<br></br>
-- [대런 아세모글루](https://en.wikipedia.org/wiki/Daron_Acemoglu), 엘리자베스와 제임스 킬리안 매사추세츠 공과대학 경제학 교수, 존 베이츠 클라크 메달 수상자이자 [*권력과 진보*](https://www.hachettebookgroup.com/titles/daron-acemoglu/power-and-progress/9781541702530/?lens=publicaffairs), [*왜 국가는 실패하는가*](https://en.wikipedia.org/wiki/Why_Nations_Fail)의 공동 저자입니다.
+- [대런 아세모글루](https://en.wikipedia.org/wiki/Daron_Acemoglu), 엘리자베스와 제임스 킬리안 매사추세츠 공과대학 경제학 교수, 존 베이츠 클라크 메달 수상자이자 [*권력과 진보*](https://www.hachettebookgroup.com/titles/daron-acemoglu/power-and-progress/9781541702530/?lens=publicaffairs), [*왜 국가는 실패하는가*](https://en.wikipedia.org/wiki/Why_Nations_Fail)의 공동 저자
 
 <br></br>
 
@@ -82,7 +82,7 @@
 <br></br>
 
 > *플루럴리티*는 대만의 탄력적인 디지털 전환에 대한 강력한 청사진을 공개합니다...전 세계의 우려하는 시민들에게 귀중한 통찰력을 제공하고...전 세계의 자유와 열린 사회를 위한 역사의 위태로운 순간 속에서 민주주의를 보존하는 데 도움이 될 수 있습니다.<br></br>
-- [프랭크 맥코트](https://en.wikipedia.org/wiki/Frank_McCourt_(임원)), [맥코트 글로벌](https://www.mccourt.com/) 및 [프로젝트 리버티](https://www.projectliberty.io/) 설립자이자 [*우리의 가장 큰 싸움*](https://ourbiggestfight.com/)의 공동 저자입니다.
+- [프랭크 맥코트](https://en.wikipedia.org/wiki/Frank_McCourt_(임원)), [맥코트 글로벌](https://www.mccourt.com/) 및 [프로젝트 리버티](https://www.projectliberty.io/) 설립자이자 [*우리의 가장 큰 싸움*](https://ourbiggestfight.com/)의 공동 저자
 
 <br></br>
 
@@ -123,7 +123,7 @@
 <br></br>
 
 > 기술이 우리 삶을 형성해왔고, 형성하고 있으며, 형성할 것이며, 형성해야 하는 방식에 대해 접근하기 쉽고 깊고 새로운 통찰력을 제공하는 놀라운 책입니다.  풍부한 증거를 바탕으로 다원성 증진을 지지하는 강력한 사례를 제시합니다... 우리 모두에게 중요한 교훈을 담고 있습니다. <br></br>
-- [콜린 메이어](https://en.wikipedia.org/wiki/Colin_Mayer), 피터 무어스 옥스퍼드 [사이드 경영대학원](https://en.wikipedia.org/wiki/Sa%C3%AFd_Business_School) 경영학 교수이자 [*번영: 더 나은 비즈니스가 더 큰 선을 만든다*](https://global.oup.com/academic/product/prosperity-9780198866824?lang=en&cc=sk)의 저자입니다.  
+- [콜린 메이어](https://en.wikipedia.org/wiki/Colin_Mayer), 피터 무어스 옥스퍼드 [사이드 경영대학원](https://en.wikipedia.org/wiki/Sa%C3%AFd_Business_School) 경영학 교수이자 [*번영: 더 나은 비즈니스가 더 큰 선을 만든다*](https://global.oup.com/academic/product/prosperity-9780198866824?lang=en&cc=sk)의 저자 
 
 
 <br></br>
