--- a/contents/korean/0-2-당신의 도(道) 찾기.md
+++ b/contents/korean/0-2-당신의 도(道) 찾기.md
@@ -5,9 +5,9 @@
 
 특히 이 방법을 권장합니다:
 
-- 주로 시사, 정치 또는 **시사**에 관심이 있는 사람은 책의 서문부터 시작하여 곧바로 읽으세요.
+- 주로 시사, 정치 또는 **시사**에 관심이 있는 사람은 책의 서문부터 시작하세요.
 
-- 개념적, 이론적 또는 폭넓은 **지적** 관심이 있는 분들은 1부와 2부를 건너뛰고 3부부터 시작하는 것을 고려하세요.
+- 개념적, 이론적 또는 폭넓은 **지적** 관심이 있는 분들은 1부와 2부를 건너뛰고 3부부터 시작하는 것을 추천드립니다.
 
 - 보다 **기술적**, 기술적 또는 공학적 관심이 있는 분들은 4부부터 시작하는 것이 좋습니다.
 
@@ -17,7 +17,7 @@
 
 - 공공 **정책**, 정부 및 사회 동원에 관심이 있는 분들은 파트 7부터 시작하는 것이 좋습니다.
 
-어디서부터 시작하든 가치를 발견하는 대부분의 독자는 계속 읽으면서 책의 '뒷부분'의 이론적 틀을 앞부분의 자료로 반복해서 채워나가는 것이 가치 있을 것으로 기대합니다.
+어디서부터 시작하든 가치를 발견하는 대부분의 독자는 계속 읽으면서 책의 '뒷부분'의 이론적 틀을 앞부분의 자료로 반복해서 채워나가는 것을 추천드립니다.
 
 이 책은 살아있는 문서입니다.  인쇄본을 읽고 있다면 이미 구식이 되어 있을 가능성이 높으므로 https://www.plurality.net/ 에서 최신 버전을 읽거나 무료로 다운로드할 수 있습니다.
 
