Update 0-2-당신의 도(道) 찾기.md

--- a/contents/korean/0-2-당신의 도(道) 찾기.md
+++ b/contents/korean/0-2-당신의 도(道) 찾기.md
@@ -23,4 +23,4 @@
 
 더 중요한 것은 여러분 자신을 단순한 독자가 아니라 이 프로젝트의 협력자로 생각해주셨으면 좋겠습니다.  언제든지 커뮤니티에서 우선순위를 정할 수 있도록 본문에 대한 우려 사항이나 문제('이슈')를 제출하거나 커뮤니티에서 검토할 수 있도록 수정 사항('풀 리퀘스트')을 https://github.com/pluralitybook/plurality 에 제출할 수 있습니다.  [모든 기여는 크레딧으로 인정되며(https://github.com/pluralitybook/plurality/blob/main/docs/Gov4Git%20and%20PMP.md), 아래에 설명된 대로 기여자 인정 및 거버넌스 권한을 얻게 됩니다.
 
-저희가 실수를 했다면 초대로 받아들여주세요.  저희가 틀렸다고 생각되면 바로잡아 주세요.  커뮤니티의 언어로 번역되지 않았다면 해당 언어로 번역된 버전을 만들어 주세요.  커뮤니티와 함께 다루고 싶지 않다면 해당 자료에는 저작권이 없으므로 원하는 것만 가져가고 나머지는 남겨두세요. "왜 아무도 이 일을 하지 않나요?"라고 묻지 마세요. 여러분이 바로 아무도 아닌 사람입니다.
+저희가 실수를 했다면 초대로 받아들여주세요.  저희가 틀렸다고 생각되면 바로잡아 주세요.  커뮤니티의 언어로 번역되지 않았다면 해당 언어로 번역된 버전을 만들어 주세요.  커뮤니티와 함께 다루고 싶지 않다면 해당 자료에는 저작권이 없으므로 원하는 것만 가져가고 나머지는 남겨두세요. "왜 아무도 이 일을 하지 않나요?"라고 묻지 마세요. 여러분이 바로 아무도 아닌 그 사람입니다.
