--- a/contents/korean/0-2-당신의 도(道) 찾기.md
+++ b/contents/korean/0-2-당신의 도(道) 찾기.md
@@ -5,17 +5,17 @@
 
 특히 이 방법을 권장합니다:
 
-- 주로 시사, 정치 또는 **시사**에 관심이 있는 사람은 책의 서문부터 시작하세요.
+- 주로 시사, 정치 또는 **시사**에 관심이 있는 독자는 책의 서문부터 시작하세요.
 
-- 개념적, 이론적 또는 폭넓은 **지적** 관심이 있는 분들은 1부와 2부를 건너뛰고 3부부터 시작하는 것을 추천드립니다.
+- 개념적, 이론적 또는 폭넓은 **지적** 관심이 있는 독자분들은 1부와 2부를 건너뛰고 3부부터 시작하는 것을 추천드립니다.
 
-- 보다 **기술적**, 기술적 또는 공학적 관심이 있는 분들은 4부부터 시작하는 것이 좋습니다.
+- 보다 **기술적**, 기술적 또는 공학적 관심이 있는 독자분들은 4부부터 시작하는 것이 좋습니다.
 
-- 구체적인 기술과 그 **응용**에 관심이 있는 분은 파트 5부터 시작하는 것이 좋습니다.
+- 구체적인 기술과 그 **응용**에 관심이 있는 독자분은 파트 5부터 시작하는 것이 좋습니다.
 
 - 특정 사회 분야의 실제 **영향력**에 관심이 있다면 파트 6부터 시작하는 것이 좋습니다.
 
-- 공공 **정책**, 정부 및 사회 동원에 관심이 있는 분들은 파트 7부터 시작하는 것이 좋습니다.
+- 공공 **정책**, 정부 및 사회 동원에 관심이 있는 독자분들은 파트 7부터 시작하는 것이 좋습니다.
 
 어디서부터 시작하든 가치를 발견하는 대부분의 독자는 계속 읽으면서 책의 '뒷부분'의 이론적 틀을 앞부분의 자료로 반복해서 채워나가는 것을 추천드립니다.
 
