Update 2-0-정보기술과 민주주의: 벌어지는 간극.md

--- a/contents/korean/2-0-정보기술과 민주주의: 벌어지는 간극.md
+++ b/contents/korean/2-0-정보기술과 민주주의: 벌어지는 간극.md
@@ -10,7 +10,7 @@
 
 ---
 
-오늘날 기술과 지정학에 대한 불안감은 만연해 있습니다.  그러나 기술 패권을 둘러싼 강대국 간의 갈등보다 더 근본적인 갈등이 진행되고 있습니다.  더 깊이 들어가면, 시스템으로서의 기술과 민주주의가 걸어온 길은 양쪽을 대치하게 만들었고, 계속되는 싸움으로 양쪽 모두 희생자가 발생했습니다.
+오늘날 기술과 지정학에 대한 불안감은 만연해 있습니다.  그러나 기술 패권을 둘러싼 강대국 간의 갈등보다 더 근본적인 갈등이 진행되고 있습니다.  더 깊이 들어가자면, 시스템으로서의 기술과 민주주의가 걸어온 길은 서로를 대치하게 만들었고, 계속되는 싸움으로 양쪽 모두 희생자가 발생했습니다.
 
 
 최근 수십 년 동안 기술의 지배적인 트렌드는 인공 지능과 블록체인입니다.  이 두 기술은 각각 중앙 집중식 하향식 통제를 강화하고 양극화와 금융 자본주의를 가속화했습니다.  두 가지 결과 모두 민주적 다원주의의 가치를 부식시킵니다.  따라서 기술이 민주주의에 대한 가장 큰 위협 중 하나이자 외부의 권위주의자들과 내부에서 민주주의를 전복하려는 사람들 모두에게 강력한 도구로 널리 여겨지는 것은 그리 놀라운 일이 아닙니다.
@@ -23,7 +23,7 @@
 
 ### 민주주의에 대한 기술의 공격
 
-지난 10년간의 정보 기술은 서로 연관되어 있지만 상반된 두 가지 방식으로 민주주의를 위협해 왔습니다. 대런 아세모글루와 제임스 A. 로빈슨의 유명한 주장처럼, 자유 민주주의 사회는 사회 붕괴와 권위주의 사이의 '[좁은 간극](https://www.penguinrandomhouse.com/books/555400/the-narrow-corridor-by-daron-acemoglu-and-james-a-robinson/)'에 존재합니다[^좁은 간극].   양쪽에서 보면 정보 기술은 이 통로를 좁히며 자유 사회의 가능성을 압박하고 있는 것처럼 보입니다.
+지난 10년간의 정보 기술은 서로 연관되어 있지만 상반된 두 가지 방식으로 민주주의를 위협해 왔습니다. 대런 아세모글루와 제임스 A. 로빈슨의 유명한 주장처럼, 자유 민주주의 사회는 사회 붕괴와 권위주의 사이의 '[좁은 간극](https://www.penguinrandomhouse.com/books/555400/the-narrow-corridor-by-daron-acemoglu-and-james-a-robinson/)'에 존재합니다[^좁은_간극].   양쪽에서 보면 정보 기술은 이 통로를 좁히며 자유 사회의 가능성을 압박하고 있는 것처럼 보입니다.
 
 한편으로는 소셜 미디어, 암호화 및 기타 금융 기술 등의 기술이 사회 구조를 무너뜨리고 양극화를 심화하며 규범을 약화시키고 법 집행을 약화시키고 금융 시장의 속도와 범위를 민주적 정치가 책임질 수 없을 정도로 확대하고 있는 것으로 보입니다.  우리는 이러한 위협을 '반사회적'이라고 부릅니다.  다른 한편으로, 기술(예: 머신러닝, 기초 모델, 사물 인터넷)은 중앙 집중식 감시의 역량을 강화하고, 소수의 엔지니어 그룹이 수십억 명의 시민과 고객의 사회생활 규칙을 형성하는 시스템의 패턴을 설정하는 능력을 강화하며, 사람들이 자신의 삶과 커뮤니티 형성에 의미 있게 참여할 수 있는 범위를 축소하고 있습니다.  우리는 이러한 위협을 '중앙 집중화'라고 부릅니다.  두 가지 위협 모두 알렉시스 드 토크빌이 [미국의 민주주의](https://www.gutenberg.org/files/815/815-h/815-h.htm)에서 강조한 것처럼, 민주주의는 깊고 다양한 비시장적이고 분산된 사회적, 시민적 연결에 의존하여 번성하는 민주주의의 핵심을 건드리고 있습니다[^미국의 민주주의]. 
 
